--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,8 @@
 #  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 version: 1.0.{build}
-build_cloud: electron-16-core2
-image: electron-test-bake-image
+build_cloud: electron-16-core
+image: vs2019bt-16.6.2
 environment:
   GIT_CACHE_PATH: C:\Users\appveyor\libcc_cache
   ELECTRON_OUT_DIR: Default
