--- a/appveyor.yml
+++ b/appveyor.yml
@@ -111,7 +111,9 @@ build_script:
 
 after_build:
 - ps: |
-    $env:APPVEYOR_BAKE_IMAGE = 'electron-test-bake-image'
+    if ($env:TARGET_ARCH -eq 'x64') {
+      $env:APPVEYOR_BAKE_IMAGE = 'electron-test-bake-image'
+    }
 
 on_image_bake:
 - ps: >-
