--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,35 +50,50 @@ notifications:
     on_build_status_changed: false
 build_script:
   - ps: >-
-      echo "Starting checks"
+      Write-Host "Starting checks"
+
       if(($env:APPVEYOR_PULL_REQUEST_HEAD_REPO_NAME -split "/")[0] -eq ($env:APPVEYOR_REPO_NAME -split "/")[0]) {
-        echo "Skipping PR build for branch"
+        
+        Write-Host "Skipping PR build for branch"
+        
         Write-warning "Skipping PR build for branch"; Exit-AppveyorBuild
       } else {
-        echo "START DOC CHECK"
+        
+        Write-Host "START DOC CHECK"
         try {
-          echo "ABOUT TO NODE INSTALL"
+        
+          Write-Host "ABOUT TO NODE INSTALL"
           node script/yarn.js install --frozen-lockfile
-          echo "ABOUT TO RUN DOC ONLY CHANGE"
+
+          Write-Host "ABOUT TO RUN DOC ONLY CHANGE"
           $result = node script/doc-only-change.js --prNumber=$env:APPVEYOR_PULL_REQUEST_NUMBER --prBranch=$env:APPVEYOR_REPO_BRANCH
-          echo "ABOUT TO write out result"
+
+          Write-Host "ABOUT TO write out result"
           Write-Output $result
-          echo "ABOUT TO check exit code"
+
+          Write-Host "ABOUT TO check exit code"
           if ($result.ExitCode -eq 0) {
-            echo "DOC ONLY CHANGE; SKIPPING BUILD"            
+
+            Write-Host "DOC ONLY CHANGE; SKIPPING BUILD"            
+
             Write-warning "Skipping build for doc only change"; Exit-AppveyorBuild
-            echo "DONE; SKIPPING BUILD"
+
+            Write-Host "DONE; SKIPPING BUILD"
           }
         } catch {
           Write-Host "An error occurred:"
           Write-Host $_
-          echo "IN CATCH"
+
+          Write-Host "IN CATCH"
+
         } finally {
-          echo "setting should exit to 0"
+
+          Write-Host "setting should exit to 0"
+
           $host.SetShouldExit(0)
         }
       }
-  - echo "Building $env:GN_CONFIG build"
+  - Write-Host "Building $env:GN_CONFIG build"
   - git config --global core.longpaths true
   - cd ..
   - git clone --depth=1 https://chromium.googlesource.com/chromium/tools/depot_tools.git
@@ -224,18 +239,18 @@ test_script:
         New-Item .\out\Default\gen\node_headers\Release -Type directory
         Copy-Item -path .\out\Default\electron.lib -destination .\out\Default\gen\node_headers\Release\node.lib
       } else {
-        echo "Skipping tests for $env:GN_CONFIG build"
+        Write-Host "Skipping tests for $env:GN_CONFIG build"
       }
   - cd electron
   # CalculateNativeWinOcclusion is disabled due to https://bugs.chromium.org/p/chromium/issues/detail?id=1139022
-  - if "%RUN_TESTS%"=="true" ( echo Running test suite & node script/yarn test -- --trace-uncaught --enable-logging --disable-features=CalculateNativeWinOcclusion )
+  - if "%RUN_TESTS%"=="true" ( Write-Host Running test suite & node script/yarn test -- --trace-uncaught --enable-logging --disable-features=CalculateNativeWinOcclusion )
   - cd ..
-  - if "%RUN_TESTS%"=="true" ( echo Verifying non proprietary ffmpeg & python electron\script\verify-ffmpeg.py --build-dir out\Default --source-root %cd% --ffmpeg-path out\ffmpeg )
-  - echo "About to verify mksnapshot"
-  - if "%RUN_TESTS%"=="true" ( echo Verifying mksnapshot & python electron\script\verify-mksnapshot.py --build-dir out\Default --source-root %cd% )
-  - echo "Done verifying mksnapshot"
-  - if "%RUN_TESTS%"=="true" ( echo Verifying chromedriver & python electron\script\verify-chromedriver.py --build-dir out\Default --source-root %cd% )
-  - echo "Done verifying chromedriver"
+  - if "%RUN_TESTS%"=="true" ( Write-Host Verifying non proprietary ffmpeg & python electron\script\verify-ffmpeg.py --build-dir out\Default --source-root %cd% --ffmpeg-path out\ffmpeg )
+  - Write-Host "About to verify mksnapshot"
+  - if "%RUN_TESTS%"=="true" ( Write-Host Verifying mksnapshot & python electron\script\verify-mksnapshot.py --build-dir out\Default --source-root %cd% )
+  - Write-Host "Done verifying mksnapshot"
+  - if "%RUN_TESTS%"=="true" ( Write-Host Verifying chromedriver & python electron\script\verify-chromedriver.py --build-dir out\Default --source-root %cd% )
+  - Write-Host "Done verifying chromedriver"
 deploy_script:
   - cd electron
   - ps: >-
