--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@
 
 version: 1.0.{build}
 build_cloud: electron-16-core2
-image: base-electron
+image: electron-test-bake-image
 environment:
   GIT_CACHE_PATH: C:\Users\appveyor\libcc_cache
   ELECTRON_OUT_DIR: Default
@@ -50,44 +50,15 @@ notifications:
     on_build_status_changed: false
 build_script:
   - ps: >-
-      Write-Host "Starting checks"
-
       if(($env:APPVEYOR_PULL_REQUEST_HEAD_REPO_NAME -split "/")[0] -eq ($env:APPVEYOR_REPO_NAME -split "/")[0]) {
-
-        Write-Host "Skipping PR build for branch"
-
         Write-warning "Skipping PR build for branch"; Exit-AppveyorBuild
       } else {
-
-        Write-Host "START DOC CHECK"
-        try {
-
-          Write-Host "ABOUT TO NODE INSTALL"
-
-          node script/yarn.js install --frozen-lockfile
-
-          Write-Host "ABOUT TO RUN DOC ONLY CHANGE"
-
-          $result = node script/doc-only-change.js --prNumber=$env:APPVEYOR_PULL_REQUEST_NUMBER --prBranch=$env:APPVEYOR_REPO_BRANCH
-
-          Write-Host "ABOUT TO check exit code"
-
-          if ($result.ExitCode -eq 0) {
-
-            Write-Host "DOC ONLY CHANGE; SKIPPING BUILD"            
-
-            Write-warning "Skipping build for doc only change"; Exit-AppveyorBuild
-
-            Write-Host "DONE; SKIPPING BUILD"
-          }
-        } catch {
-          Write-Host "An error occurred:"
-          Write-Host $_
-          Write-Host "IN CATCH"
-        } finally {
-          Write-Host "setting should exit to 0"
-          $global:LASTEXITCODE = 0
+        node script/yarn.js install --frozen-lockfile
+        $result = node script/doc-only-change.js --prNumber=$env:APPVEYOR_PULL_REQUEST_NUMBER --prBranch=$env:APPVEYOR_REPO_BRANCH
+        if ($result.ExitCode -eq 0) {
+          Write-warning "Skipping build for doc only change"; Exit-AppveyorBuild
         }
+        $global:LASTEXITCODE = 0
       }
   - echo "Building $env:GN_CONFIG build"
   - git config --global core.longpaths true
@@ -107,58 +78,7 @@ build_script:
       --unmanaged
       %GCLIENT_EXTRA_ARGS%
       "https://github.com/electron/electron"
-  - ps: >-
-      if ($env:GN_CONFIG -eq 'release') {
-        $env:RUN_GCLIENT_SYNC="true"
-      } else {
-        cd src\electron
-        node script\generate-deps-hash.js
-        $depshash = Get-Content .\.depshash -Raw 
-        $zipfile = "Z:\$depshash.7z"
-        cd ..\..
-        if (Test-Path -Path $zipfile) {
-          # file exists, unzip and then gclient sync
-          7z x -y $zipfile -mmt=30 -aoa
-          if (-not (Test-Path -Path "src\buildtools")) {
-            # the zip file must be corrupt - resync
-            $env:RUN_GCLIENT_SYNC="true"
-            if ($env:TARGET_ARCH -ne 'ia32') {
-              # only save on x64/woa to avoid contention saving
-              $env:SAVE_GCLIENT_SRC="true"
-            }
-          } else {
-            # update angle
-            cd src\third_party\angle
-            git remote set-url origin  https://chromium.googlesource.com/angle/angle.git
-            git fetch
-            cd ..\..\..
-          }
-        } else {    
-          # file does not exist, gclient sync, then zip
-          $env:RUN_GCLIENT_SYNC="true"
-          if ($env:TARGET_ARCH -ne 'ia32') {
-            # only save on x64/woa to avoid contention saving
-            $env:SAVE_GCLIENT_SRC="true"
-          }
-        }
-      }
-  - if "%RUN_GCLIENT_SYNC%"=="true" ( gclient sync )
-  - ps: >-
-      if ($env:SAVE_GCLIENT_SRC -eq 'true') {
-        # archive current source for future use 
-        # only run on x64/woa to avoid contention saving
-        $(7z a $zipfile src -xr!android_webview -xr!electron -xr'!*\.git' -xr!third_party\WebKit\LayoutTests! -xr!third_party\blink\web_tests -xr!third_party\blink\perf_tests -slp -t7z -mmt=30)
-        if ($LASTEXITCODE -ne 0) {
-          Write-warning "Could not save source to shared drive; continuing anyway"
-        }
-        # build time generation of file gen/angle/angle_commit.h depends on
-        # third_party/angle/.git
-        # https://chromium-review.googlesource.com/c/angle/angle/+/2074924       
-        $(7z a $zipfile src\third_party\angle\.git)
-        if ($LASTEXITCODE -ne 0) {
-          Write-warning "Failed to add third_party\angle\.git; continuing anyway"
-        }
-      }
+  - gclient sync
   - ps: >-
       if (Test-Path 'env:RAW_GOMA_AUTH') {
         $env:GOMA_OAUTH2_CONFIG_FILE = "$pwd\.goma_oauth2_config"
